# c-tutorial

./: .gitignore  CMakeLists.txt  readme.md
excel/: CMakeLists.txt  main.c  readme.md
excel/ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj  main.c  persons.csv
k8s/postgresql/: postgresql.yaml
pyramide/: CMakeLists.txt  main.c  pyramide.c  pyramide.h  pyramide.vcxproj.filters
pyramide-vs/: main.c  pyramide.sln  pyramide.vcxproj
school_class_list/: CMakeLists.txt  main.c  person.c  person.h  readme.md  student.c  student.h
tic-tac-toe/: .gitignore  CMakeLists.txt
wasm/: .gitignore  package.json
webapi/MovieServiceTests/: MovieServiceTests.cs  MovieServiceTests.csproj
webapi/core/: Program.cs  appsettings.json  core.csproj  core.sln  readme.md
webapi/core/Controllers/: MoviesController.cs
webapi/core/Models/: DbInitializer.cs  DbInitializerExtension.cs  Movie.cs  MovieContext.cs  MovieDbContext.cs
webapi/core/Properties/: launchSettings.json
webapi/core/Services/: DemoService.cs
webapi/core/requests/: movies.http
